testcases/pos/labeled/call_on_secret_lambda.bard
let val g = (n) => n
    val f = g raisedTo {secret}
in
    f(42)
end
