testcases/neg/labeled/secret_fun_raise_blocking.bard
let val f = (n) => send n
    val g = f raisedTo {secret}
in
    g(1)
end
